# echo-state-networks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  analysis.hpp  argument_utils.hpp  arrayfire_utils.hpp  benchmark_lcnn_step_speed.cpp  benchmark_results.hpp  benchmarks.hpp  common.hpp  compare_lcnn_kernels.cpp  compare_lcnn_step_to_sparse_matmul.cpp  compare_plot.py  csv_plot.py  data_map.hpp  echo-state-networks-cuda-11.2.dockerfile  echo-state-networks-cuda-11.8.dockerfile  echo-state-networks-cuda-12.3.dockerfile  echo-state-networks-cuda-12.4.dockerfile  echo-state-networks.dockerfile  elasticnet_af.hpp  evaluate.cpp  lcnn.hpp  lcnn_adapt.hpp  lcnn_adapt_cl.cpp  lcnn_adapt_cuda.cu  lcnn_adapt_generic.cpp  lcnn_adapt_generic.hpp  lcnn_ensemble.hpp  lcnn_fixer.hpp  lcnn_step_cuda.cu  lcnn_step_generic.cpp  lcnn_step_generic.hpp  memory_vs_kernel_plot.py  misc.hpp  net.hpp  optimize.cpp  optimize.hpp  (+7 more)
dockerfiles/: echo-state-networks-cuda-11.2.dockerfile  echo-state-networks-cuda-11.8.dockerfile  echo-state-networks-cuda-12.3.dockerfile  echo-state-networks-cuda-12.4.dockerfile
experiments/: compare-TOPO-20-25-kernels-cerina-mg10-17.sh  compare-TOPO-20-25-kernels-gallancchio-mgTAU.sh  compare-TOPO-20-25-kernels-gallancchio-narma10.sh  compare-TOPO-2000-kernels-gallancchio-narma10.sh  compare-TOPO-40-50-kernels-gallancchio-narma10.sh  compare-TOPO-500-k3-ratios-v1-narma10.sh  compare-TOPO-500-ratios-KERNEL-v1-narma10-cluster.sh  compare-TOPO-500-ratios-KERNEL-v1-narma10.sh  compare-TOPO-80-100-kernels-gallancchio-narma10.sh  compare-TOPO-8000-kernels-gallancchio-narma10.sh  compare-TOPO-HEIGHT-WIDTH-TRAIN-kernels-narma10.sh  compare-TOPO-HEIGHT-WIDTH-kernels-TRAIN-v1-narma10-cluster.sh  compare-TOPO-HEIGHT-WIDTH-kernels-TRAIN-v1-narma10.sh  compare-TOPO-HEIGHT-WIDTH-kernels-TRAIN-v1-narma30-cluster.sh  compare-TOPO-HEIGHT-WIDTH-kernels-TRAIN-v1-narma30.sh  compare-TOPO-HEIGHT-WIDTH-kernels-ettm1-AHEAD-loop-cluster.sh  compare-TOPO-HEIGHT-WIDTH-kernels-ettm1-AHEAD-loop.sh  compare-TOPO-HEIGHT-WIDTH-kernels-gallancchio-narma10.sh  compare-TOPO-kernels-cerina-mg10-17.sh  compare-TOPO-kernels-gallancchio-mgTAU.sh  compare-TOPO-kernels-gallancchio-narma10.sh  compare-TOPO-ratios-kernels-v1-narma10.sh  compare-TOPO-ratios-list.py  compare-TOPO-sizes-kernels-v1-narma10.sh  compare-singleinput-TOPO-kernels-gallancchio-narma10.sh  ettm-validation-stride-stages.json  evaluate-electricity-loop-test-MODEL-AUTORETRAIN.sh  evaluate-electricity-loop-test-MODEL-LMS-AUTORETRAIN.sh  evaluate-etth1-loop-test-MODEL-AUTORETRAIN.sh  evaluate-etth1-loop-test-MODEL-LMS-AUTORETRAIN.sh  evaluate-etth1-loop-time-decomposition-MODEL-LMS-AUTORETRAIN.sh  evaluate-etth2-loop-test-MODEL-AUTORETRAIN.sh  evaluate-etth2-loop-test-MODEL-LMS-AUTORETRAIN.sh  evaluate-ettm-loop-DIR.sh  evaluate-ettm-loop-test-DIR.sh  evaluate-ettm1-loop-DIR.sh  evaluate-ettm1-loop-test-MODEL-AUTORETRAIN.sh  evaluate-ettm1-loop-test-MODEL-LMS-AUTORETRAIN.sh  evaluate-ettm2-loop-test-MODEL-AUTORETRAIN.sh  evaluate-ettm2-loop-test-MODEL-LMS-AUTORETRAIN.sh  (+140 more)
experiments/archive/: README.md  compare-TOPO-20-25-kernels-cerina-mg10-17.sh  compare-TOPO-20-25-kernels-gallancchio-mgTAU.sh  compare-TOPO-20-25-kernels-gallicchio-mgTAU.sh  compare-TOPO-HEIGHT-WIDTH-kernels-TRAIN-v1-narma30-cluster.sh  compare-TOPO-HEIGHT-WIDTH-kernels-TRAIN-v1-narma30.sh  compare-TOPO-sizes-kernels-v1-narma10.sh  compare-singleinput-TOPO-kernels-gallancchio-narma10.sh  compare-singleinput-TOPO-kernels-gallicchio-narma10.sh  fb_weight_sensitivity.sh  fb_weight_sensitivity_small.sh  in_weight_sensitivity.sh  lcnn-od-113-141-init-steps-sensitivity.sh  lcnn-od-113-141-train-steps-sensitivity.sh  lcnn-od-40-50-train-steps-sensitivity.sh  lcnn-od-57-70-init-steps-sensitivity.sh  lcnn-od-57-70-train-steps-sensitivity.sh  lcnn-od-80-100-init-steps-sensitivity.sh  lcnn-od-80-100-train-steps-sensitivity.sh  optimize-TOPO-100-cernansky-narma10.sh  optimize-TOPO-200-dale-narma30.sh  optimize-TOPO-200-rodan-narma10.sh  optimize-TOPO-500-cerina-mg10-17.sh  optimize-TOPO-500-gallancchio-narma10.sh  optimize-TOPO-500-gallicchio-mgTAU.sh  optimize-TOPO-500-gallicchio-narma10.sh  optimize-TOPO-500-wang-mg84-17.sh  optimize-TOPO-500-wang-narma10.sh  optimize-TOPO-HEIGHT-WIDTH-KERNEL-TRAIN-v1-mgTAU.sh  optimize-TOPO-HEIGHT-WIDTH-k3-gallicchio-narma10.sh  optimize-TOPO-nofb-200-dale-narma30.sh  optimize-TOPO-nofb-400-dale-narma30.sh
plot/: compare_plot.py  memory_vs_kernel_plot.py  param_correlation.py  visual.py
scripts/: benchmark_lcnn_step_speed_plot.py  best_run.py  cmake-build-singularity.sh  download-20250125-logs.sh  download-datasets.sh  evaluate-lyapunovs.sh  list-best-logdir.sh  list-best.sh  lyapunovs_plot.py  max-gpu-memory.sh  memory-effect-plot.sh  memory_effect.py  memory_effect_plot.sh  plot_csv.py  result-latex-table.py  result_latex_table.py  run-cpu-experiment-singularity.sh  run-cuda-experiment-singularity.sh  run-on-free-gpu.sh  timings_plot.py
src/: benchmarks.hpp  lcnn.hpp  lcnn_adapt_cl.cpp  lcnn_fixer.hpp  lcnn_step.hpp  lcnn_step_cl.cpp  lcnn_step_cpu.cpp  param_sensitivity.hpp  param_sensitivity_double.cpp
test/: CMakeLists.txt  common_test.cpp  common_test.hpp  lcnn_step_cl_test.cpp  lcnn_step_cpu_test.cpp  lcnn_step_cuda_test.cpp
